# elf-size

./: .gitignore  Cargo.toml  README.md
src/: elf_parser.rs  main.rs  report.rs
src/parsers/: definitions.rs  demangle.rs  goblin.rs  mod.rs  native.rs  nm.rs
