[package]
name = "elf-diff"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
cpp_demangle = "0.4"
csv = "1.3.0"
comfy-table = "7.1.0"
eyre = "0.6.12"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt"] }
