[package]
name = "elf-diff"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
cpp_demangle = "0.4"
csv = "1.3.0"
object = "0.36.0"
rustc-demangle = "0.1"
comfy-table = "7.1.0"
terminal_size = "0.2.6"
eyre = "0.6.12"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt"] }
